new app, readme

--- a/app/app.css
+++ b/app/app.css
@@ -2,9 +2,18 @@ body {
   font-family: "Trebuchet MS";
   color: grey;
 }
+
 h3 {
   color: black;
 }
 p {
   font-weight: bold;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #EEE;
+  margin: 1em 0;
+  padding: 0;
 }
